fix(texts): font size on mobile

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -43,7 +43,7 @@ footer {
 					flex-direction: row;
 				}
 				a {
-					font-size: rem(1.5);
+					font-size: rem(1.2);
 					@media (min-width: $from-small) {
 						font-size: rem(1.4);
 					}
