--- a/styles/elements/_texts.scss
+++ b/styles/elements/_texts.scss
@@ -3,7 +3,7 @@
 }
 
 p.medium {
-	font-size: rem(1.5);
+	font-size: rem(1.2);
 	text-align: center;
 	line-height: rem(2);
 
